More of the plugin's language can be edited now